--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -50,17 +50,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@main
-      - run: ps -p $$
-      - name: perl -V
-        run: perl -V
-      - name: Install dependencies
+      - run: perl -V
+      - name: Install system dependencies
         run: apt install -y libtinfo5
       - run: touch ~/.profile
       - name: Download & unpack Wasmer
         run: curl https://get.wasmer.io -sSfL | sh -s v${{ matrix.wasmer-version }}
-      - name: Install Dependencies
+      - name: Install CPAN dependencies
         run: cpanm --notest --installdeps --with-configure --with-develop .
-      - run: cat ~/.profile
       - name: perl Makefile.PL
         run: source ~/.profile && perl Makefile.PL
       - name: make
@@ -90,7 +87,8 @@ jobs:
       - run: touch ~/.profile
       - name: Download & unpack Wasmer
         run: curl https://get.wasmer.io -sSfL | sh
-      - run: source ~/.profile && env
+      - run: source ~/.profile && env | sort
+      - run: cat ~/.profile
       - run: source ~/.profile && perl Makefile.PL
       - name: make
         run: make
