--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -50,6 +50,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@main
+        with:
+            submodules: recursive
       - run: perl -V
 #      - name: Install system dependencies
 #        run: apt install -y libtinfo5
